[tool.poetry]
name = "repl_python3_DiscordBOT-DisBot"
version = "0.1.0"
description = ""
authors = ["puroxx <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
randfacts = "^0.5.1"
bibi = "^0.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
